syntax = "proto3";

package ic_ssh;
option go_package = "pkg/pb";
option swift_prefix = "";

// Message to encode token for SSH authenticaiton with CLI
message SSHTokenAuthentication {
  string token = 1;
  string local_socket = 2;
}
